<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_friends"
            android:icon="@drawable/menu_friends"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/menu_group"
            android:icon="@drawable/menu_group"
            android:title="@string/menu_group" />
        <item
            android:id="@+id/menu_profil"
            android:icon="@drawable/menu_profil"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/menu_favorite"
            android:icon="@drawable/menu_favorite"
            android:title="@string/menu_favorite" />
    </group>



</menu>
